--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,5 +15,5 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: broady/fileserver/fileserver
+          repository: ghcr.io/broady/fileserver
           tag_with_ref: true
