--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,15 +9,11 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+      - name: Push to GitHub Packages
+        uses: docker/build-push-action@v1
         with:
-          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Push to ghcr.io
-        uses: docker/build-push-action@v2
-        with:
-          registry: ghcr.io
-          repository: broady/fileserver
+          registry: docker.pkg.github.com
+          repository: broady/fileserver/fileserver
           tag_with_ref: true
