--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,5 +15,5 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_TOKEN }}
           registry: ghcr.io
-          repository: broady/fileserver/fileserver
+          repository: broady/fileserver
           tag_with_ref: true
